# AT

A/: gen  gen.cpp  main.cpp  solution
A/testy/: README.txt  suite.tar.xz  suite0.tout  suite1.in  suite10.in  suite10.tout  suite11.in  suite11.tout  suite12.in  suite13.in  suite14.in  suite15.in  suite16.in  suite17.in  suite18.in  suite19.in  suite2.in  suite20.in  suite3.in  suite3.tout  suite4.in  suite4.tout  suite5.in  suite5.out  suite6.in  suite6.out  suite7.in  suite7.out  suite8.in  suite8.out  suite9.in  suite9.tout  t00.out  t00.tout
B/: brut  brut.cpp  gen  gen.cpp  killer.in  killer.out  main.cpp  solution
B/testy/: t00.in  t00.out  t00.tout  t01.in  t01.out  t02.in  t02.out  t03.in  t03.out  t04.in  t04.out  t05.in  t05.out  t06.in  t07.in
C/: CMakeLists.txt  main.cpp
C/testy/: t00.in
D/: CMakeLists.txt  compressor.h  main.cpp  solution
E/: CMakeLists.txt  brut  brut.cpp  gen  gen.cpp  killer.in  killer.tout  main.cpp  run  runner.cpp  solution
E/testy/: t00.in  t00.tout
